[package]
name = "tank_battle"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = {version = "*"}
bevy_rapier2d = "0.32"

[features]
default = []
dev = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Optimize for size in release mode
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Remove debug symbols
panic = "abort"     # Reduce binary size

